implement hot reload

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "nodemon -e ejs,js,json start ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
