--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-session": "^1.17.2",
     "firebase": "^9.8.2",
     "firebaseui": "^6.0.1",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
